--- a/html/teilnehmerS2.html
+++ b/html/teilnehmerS2.html
@@ -20,11 +20,11 @@
           <a href="../index.html">Startseite</a>
         </li>
         <li>
-          <a href="./html/teilnehmer.html">Teilnehmer</a>
+          <a href="../html/teilnehmer.html">Teilnehmer</a>
         </li>
         <li>
-          <a href="../html/teilnehmerS2.html">Teilnehmer S02</a>
-        </li>
+            <a href="../html/teilnehmerS2.html">Teilnehmer S02</a>
+          </li>
         <li>
           <a href="../html/rechtliches.html">Rechtliches</a>
         </li>
@@ -49,7 +49,7 @@
 
   </main>
 
-  <script src="../js/teilnehmer.js" ></script>
+  <script src="../js/teilnehmerS2.js"></script>
 
 </body>
 
