--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
           <a href="./html/teilnehmer.html">Teilnehmer</a>
         </li>
         <li>
+          <a href="./html/teilnehmerS2.html">Teilnehmer S02</a>
+        </li>
+        <li>
           <a href="./html/rechtliches.html">Rechtliches</a>
         </li>
         <!-- <li class="search">
