--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <nav>
       <img src="../img/logo.webp" alt="Travelo" class="logo">
       <ul>
-        <li>
+        <li class="activ">
           <a href="../index.html">Startseite</a>
         </li>
-        <li>
+        <li class="activ">
           <a href="./html/teilnehmer.html">Teilnehmer</a>
         </li>
-        <li>
+        <li class="activ">
           <a href="./html/teilnehmerS2.html">Teilnehmer S02</a>
         </li>
-        <li>
+        <li class="activ">
           <a href="./html/rechtliches.html">Rechtliches</a>
         </li>
         <!-- <li class="search">
