--- a/html/rechtliches.html
+++ b/html/rechtliches.html
@@ -8,38 +8,40 @@
   <title>Rechtliches</title>
   <link rel="stylesheet" href="../css/rechtliches.css">
   <link rel="stylesheet" href="../style.css">
+  
 </head>
 
 <body>
-    <header class="hide">
-        <nav>
-          <img src="../img/logo.webp" alt="Travelo" class="logo">
-          <ul>
-            <li class="activ">
-              <a href="../index.html">Startseite</a>
-            </li>
-            <li class="activ">
-              <a href="../html/teilnehmer.html">Teilnehmer</a>
-            </li>
-            <li class="activ">
-              <a href="../html/teilnehmerS2.html">Teilnehmer S02</a>
-            </li>
-            <li class="activ">
-              <a href="./html/rechtliches.html">Rechtliches</a>
-            </li>
-            <!-- <li class="search">
-              <a href="#">
-                <i class="fa-solid fa-magnifying-glass"></i>
-              </a>
-            </li>
-            <li class="hamburger">
-              <a href="#">
-                <div class="bar"></div>
-              </a>
-            </li> -->
-          </ul>
-        </nav>
-      </header>
+  <header class="hide">
+    <nav>
+      <img src="../img/logo.webp" alt="Travelo" class="logo">
+      <ul>
+        <li class="activ">
+          <a href="../index.html">Startseite</a>
+        </li>
+        <li class="activ">
+          <a href="./html/teilnehmer.html">Teilnehmer</a>
+        </li>
+        <li class="activ">
+          <a href="../html/teilnehmerS2.html">Teilnehmer S02</a>
+        </li>
+        <li class="activ">
+          <a href="../html/rechtliches.html">Rechtliches</a>
+        </li>
+      </ul>
+      <div class="hamburger" id="hamburgerBtn">
+        <a href="#">
+          <div class="bar"></div>
+        </a>
+      </div>
+      <ul class="dropdown-menu">
+        <li><a href="../index.html">Startseite</a></li>
+        <li><a href="../html/teilnehmer.html">Teilnehmer</a></li>
+        <li><a href="../html/teilnehmerS2.html">Teilnehmer S02</a></li>
+        <li><a href="../html/rechtliches.html">Rechtliches</a></li>
+      </ul>
+    </nav>
+  </header>
   <div class="container">
     <h1>Rechtliches</h1>
     <p>
@@ -58,6 +60,7 @@
       Wir danken Ihnen für Ihr Verständnis und respektieren die Rechte und das geistige Eigentum von 7vsWild.
     </p>
   </div>
+  <script src="../js/rechtliches.js"></script>
 </body>
 
 </html>
