--- a/html/teilnehmerS2.html
+++ b/html/teilnehmerS2.html
@@ -20,24 +20,25 @@
           <a href="../index.html">Startseite</a>
         </li>
         <li class="activ">
-          <a href="../html/teilnehmer.html">Teilnehmer</a>
+          <a href="./teilnehmer.html">Teilnehmer</a>
         </li>
         <li class="activ">
-            <a href="../html/teilnehmerS2.html">Teilnehmer S02</a>
-          </li>
+          <a href="../html/teilnehmerS2.html">Teilnehmer S02</a>
+        </li>
         <li class="activ">
           <a href="../html/rechtliches.html">Rechtliches</a>
         </li>
-        <!-- <li class="search">
-          <a href="#">
-            <i class="fa-solid fa-magnifying-glass"></i>
-          </a>
-        </li>
-        <li class="hamburger">
-          <a href="#">
-            <div class="bar"></div>
-          </a>
-        </li> -->
+      </ul>
+      <div class="hamburger" id="hamburgerBtn">
+        <a href="#">
+          <div class="bar"></div>
+        </a>
+      </div>
+      <ul class="dropdown-menu">
+        <li><a href="../index.html">Startseite</a></li>
+        <li><a href="./teilnehmer.html">Teilnehmer</a></li>
+        <li><a href="../html/teilnehmerS2.html">Teilnehmer S02</a></li>
+        <li><a href="../html/rechtliches.html">Rechtliches</a></li>
       </ul>
     </nav>
   </header>
